tests/script_runtime_errors/match_bad_guard_type/error.txt
Error: 
    1 | match true of
    2 |   case true when "snot" => true
      |                  ^^^^^^ Conflicting types, got string but expected bool
    3 | end
